--- a/src/main/resources/assets/pipe_connector/lang/en_us.json
+++ b/src/main/resources/assets/pipe_connector/lang/en_us.json
@@ -11,5 +11,6 @@
   "item.pipe_connector.tooltip.changeDepthExplanation":"Shift + Scroll wheel to change Pipe depth",
   "item.pipe_connector.tooltip.shiftForMoreInfo": "Hold Shift for more info",
   "item.pipe_connector.message.newDepth": "Depth was set to %s",
-  "item.pipe_connector.message.notEnoughPipes": "Not enough pipes in inventory, missing %s pipes"
+  "item.pipe_connector.message.notEnoughPipes": "Not enough pipes in inventory, missing %s pipes",
+  "item.pipe_connector.message.reachedPipeLimit": "Unable to place more than %s pipes at once"
 }
