- Bumped Version - Will no longer place ANY pipes if trying to place them on an unbreakable block, previously it would not be placed on the bedrock, but would be placed below and above it making a bad connection. - Updated the Pipe Connector texture (Thanks to CrownSheep - https://github.com/CrownSheep)

--- a/src/main/resources/assets/pipe_connector/lang/en_us.json
+++ b/src/main/resources/assets/pipe_connector/lang/en_us.json
@@ -12,5 +12,6 @@
   "item.pipe_connector.tooltip.shiftForMoreInfo": "Hold Shift for more info",
   "item.pipe_connector.message.newDepth": "Depth was set to %s",
   "item.pipe_connector.message.notEnoughPipes": "Not enough pipes in inventory, missing %s pipes",
-  "item.pipe_connector.message.reachedPipeLimit": "Unable to place more than %s pipes at once"
+  "item.pipe_connector.message.reachedPipeLimit": "Unable to place more than %s pipes at once",
+  "item.pipe_connector.message.unbreakableBlockReached": "Pipes cannot replace %s blocks"
 }
