Rest of the commit

--- a/src/main/resources/assets/pipe_connector/lang/en_us.json
+++ b/src/main/resources/assets/pipe_connector/lang/en_us.json
@@ -9,12 +9,13 @@
   "item.pipe_connector.tooltip.usageExplanation":"Shift + Right-Click on Blocks will set positions",
   "item.pipe_connector.tooltip.CancelSelectionExplanation":"Shift + Right-Click on Air will cancel selection",
   "item.pipe_connector.tooltip.changeDepthExplanation":"Shift + Scroll wheel to change Pipe depth",
+  "item.pipe_connector.tooltip.openGui":"Shift + Left-Click to open the GUI to Place Pipes or Reset Positions",
   "item.pipe_connector.tooltip.shiftForMoreInfo": "Hold Shift for more info",
   "item.pipe_connector.message.newDepth": "Depth was set to %s",
   "item.pipe_connector.message.notEnoughPipes": "Not enough pipes in inventory, missing %s pipes",
   "item.pipe_connector.message.reachedPipeLimit": "Unable to place more than %s pipes at once",
   "item.pipe_connector.message.unbreakableBlockReached": "Pipes cannot replace %s blocks",
-  "item.pipe_connector.gui.button.ResetPipePos": "Reset",
+  "item.pipe_connector.gui.button.ResetPipePos": "Reset Positions",
   "item.pipe_connector.gui.button.PlacePipes": "Place Pipes",
   "item.pipe_connector.gui.button.tooltip.disabledResetPipePos": "You haven't chosen a any positions yet",
   "item.pipe_connector.gui.button.tooltip.disabledPlacePipes": "Please choose 2 positions first",
