--- a/src/main/resources/assets/pipe_connector/lang/en_us.json
+++ b/src/main/resources/assets/pipe_connector/lang/en_us.json
@@ -2,6 +2,7 @@
 
   "item.pipe_connector.pipe_connector": "Pipe Connector",
   "item.pipe_connector.message.holdValidItem": "You must hold a valid pipe item in your off-hand",
+  "item.pipe_connector.gui.button.tooltip.disabledButtonHoldValidItem": "You must hold a valid pipe item in your off-hand",
   "item.pipe_connector.message.UpSideNotAllowed": "You can't connect a pipe to the top of a block",
   "item.pipe_connector.message.firstPositionSet": "1st position chosen at: %s",
   "item.pipe_connector.message.secondPositionSet":"2nd position chosen at: %s",
@@ -13,6 +14,7 @@
   "item.pipe_connector.tooltip.shiftForMoreInfo": "Hold Shift for more info",
   "item.pipe_connector.message.newDepth": "Depth was set to %s",
   "item.pipe_connector.message.notEnoughPipes": "Not enough pipes in inventory, missing %s pipes",
+  "item.pipe_connector.gui.button.tooltip.disabledNotEnoughPipes": "Not enough pipes in inventory, missing %s pipes",
   "item.pipe_connector.message.reachedPipeLimit": "Unable to place more than %s pipes at once",
   "item.pipe_connector.message.unbreakableBlockReached": "Pipes cannot replace %s blocks",
   "item.pipe_connector.gui.button.ResetPipePos": "Reset Positions",
