--- a/src/main/resources/assets/pipe_connector/lang/en_us.json
+++ b/src/main/resources/assets/pipe_connector/lang/en_us.json
@@ -26,11 +26,12 @@
   "item.pipe_connector.gui.label.availablePipes": "Available Pipes: %s",
   "item.pipe_connector.gui.button.bridgeType": "Bridge Type: %s",
   "item.pipe_connector.gui.button.aStarPathfinding": "A* Pathfinding",
-  "item.pipe_connector.gui.tooltip.aStarPathfinding": "This will try to find the shortest path between the two positions, Will also try to go around ores",
+  "item.pipe_connector.gui.tooltip.Pathfinding": "This will try to find the shortest path between the two positions",
+  "item.pipe_connector.gui.tooltip.aStarPathfindingImportantInfo": " Will also try to go around ores",
+  "item.pipe_connector.gui.tooltip.defaultPathfindingImportantInfo": "Will not try to go around ores",
   "item.pipe_connector.gui.button.defaultPathfinding": "Default Pathfinding",
-  "item.pipe_connector.gui.tooltip.defaultPathfinding": "This will try to find the shortest path between the two positions, Will not try to go around ores",
   "item.pipe_connector.gui.button.stepPath": "Step Path",
-  "item.pipe_connector.gui.tooltip.stepPath": "After choosing the first position, the path wlil follow your steps at selected depth",
+  "item.pipe_connector.gui.tooltip.stepPath": "After choosing the first position, the path will follow your steps at selected depth",
   "item.pipe_connector.gui.tooltip.comingSoon": "Coming SoonTM...",
   "item.pipe_connector.gui.button.infoSign": "?"
 
