- Fixed Bridge Info Tooltip
- Bumped version

--- a/src/main/resources/assets/pipe_connector/lang/en_us.json
+++ b/src/main/resources/assets/pipe_connector/lang/en_us.json
@@ -26,9 +26,9 @@
   "item.pipe_connector.gui.label.availablePipes": "Available Pipes: %s",
   "item.pipe_connector.gui.button.bridgeType": "Bridge Type: %s",
   "item.pipe_connector.gui.button.aStarPathfinding": "A* Pathfinding",
-  "item.pipe_connector.gui.tooltip.Pathfinding": "This will try to find the shortest path between the two positions",
-  "item.pipe_connector.gui.tooltip.aStarPathfindingImportantInfo": " Will also try to go around ores",
-  "item.pipe_connector.gui.tooltip.defaultPathfindingImportantInfo": "Will not try to go around ores",
+  "item.pipe_connector.gui.tooltip.Pathfinding": "This will find the shortest path between the two positions",
+  "item.pipe_connector.gui.tooltip.aStarPathfindingImportantInfo": "A* will try to go around ores.",
+  "item.pipe_connector.gui.tooltip.defaultPathfindingImportantInfo": "Default will go through ores and void them.",
   "item.pipe_connector.gui.button.defaultPathfinding": "Default Pathfinding",
   "item.pipe_connector.gui.button.stepPath": "Step Path",
   "item.pipe_connector.gui.tooltip.stepPath": "After choosing the first position, the path will follow your steps at selected depth",
