--- a/src/main/resources/assets/pipe_connector/lang/en_us.json
+++ b/src/main/resources/assets/pipe_connector/lang/en_us.json
@@ -33,6 +33,12 @@
   "item.pipe_connector.gui.button.stepPath": "Step Path",
   "item.pipe_connector.gui.tooltip.stepPath": "After choosing the first position, the path will follow your steps at selected depth",
   "item.pipe_connector.gui.tooltip.comingSoon": "Coming SoonTM...",
-  "item.pipe_connector.gui.button.infoSign": "?"
+  "item.pipe_connector.gui.button.infoSign": "?",
+  "item.pipe_connector.gui.label.utilizeExistingPipes": "Utilize Pipes",
+  "item.pipe_connector.gui.button.on": "✔",
+  "item.pipe_connector.gui.button.off": "❌",
+  "item.pipe_connector.gui.button.tooltip.inactiveUtilizeExistingPipes": "A* Pathfinding must be selected to use this feature",
+  "item.pipe_connector.gui.button.tooltip.utilizeExistingPipesInfoPartOne": "This will try to use already placed",
+  "item.pipe_connector.gui.button.tooltip.utilizeExistingPipesInfoPartTwo": "pipes to connect the two positions"
 
 }
