- Added WIP Inventory destruction prevention - The Build pipes will now be disabled if something that can't or shouldn't be broken is blocking the path - Code styling, depth is not a boolean - Preparations to create the "should keep inventory and stuff safe" button.
TODO:
Implement the button in the GUI that prevents destruction of inventories.

--- a/src/main/resources/assets/pipe_connector/lang/en_us.json
+++ b/src/main/resources/assets/pipe_connector/lang/en_us.json
@@ -17,6 +17,7 @@
   "item.pipe_connector.gui.button.tooltip.disabledNotEnoughPipes": "Not enough pipes in inventory, missing %s pipes",
   "item.pipe_connector.message.reachedPipeLimit": "Unable to place more than %s pipes at once",
   "item.pipe_connector.message.unbreakableBlockReached": "Pipes cannot replace %s blocks",
+  "item.pipe_connector.gui.button.tooltip.disabledInventoryInPath": "Cannot break inventory blocks, %s is in path.",
   "item.pipe_connector.gui.button.ResetPipePos": "Reset Positions",
   "item.pipe_connector.gui.button.PlacePipes": "Place Pipes",
   "item.pipe_connector.gui.button.tooltip.disabledResetPipePos": "You haven't chosen a any positions yet",
