--- a/src/main/resources/assets/pipe_connector/lang/en_us.json
+++ b/src/main/resources/assets/pipe_connector/lang/en_us.json
@@ -37,9 +37,11 @@
   "item.pipe_connector.gui.tooltip.comingSoon": "Coming SoonTM...",
   "item.pipe_connector.gui.button.infoSign": "?",
   "item.pipe_connector.gui.label.utilizeExistingPipes": "Utilize Pipes",
+  "item.pipe_connector.gui.label.preventBlockWithInventoryDestruction": "Chest Guard",
   "item.pipe_connector.gui.button.on": "✔",
   "item.pipe_connector.gui.button.off": "❌",
   "item.pipe_connector.gui.button.tooltip.inactiveUtilizeExistingPipes": "A* Pathfinding must be selected to use this feature",
   "item.pipe_connector.gui.button.tooltip.utilizeExistingPipesInfoPartOne": "This will try to use already placed",
-  "item.pipe_connector.gui.button.tooltip.utilizeExistingPipesInfoPartTwo": "pipes to connect the two positions"
+  "item.pipe_connector.gui.button.tooltip.utilizeExistingPipesInfoPartTwo": "pipes to connect the two positions",
+  "item.pipe_connector.gui.button.tooltip.InventoryGuard": "This will prevent the destruction of blocks with inventories"
 }
