- Cleaned up UI quite a bit - Got rid of the legendary art I made which was very ugly really

--- a/src/main/resources/assets/pipe_connector/lang/en_us.json
+++ b/src/main/resources/assets/pipe_connector/lang/en_us.json
@@ -30,13 +30,16 @@
   "item.pipe_connector.gui.button.aStarPathfinding": "A* Pathfinding",
   "item.pipe_connector.gui.tooltip.Pathfinding": "This will find the shortest path between the two positions",
   "item.pipe_connector.gui.tooltip.aStarPathfindingImportantInfo": "A* will try to go around ores.",
-  "item.pipe_connector.gui.tooltip.defaultPathfindingImportantInfo": "Default will go through ores and void them.",
-  "item.pipe_connector.gui.button.defaultPathfinding": "Default Pathfinding",
+  "item.pipe_connector.gui.tooltip.defaultPathfindingImportantInfo": "Manhattan will go through ores and void them.",
+  "item.pipe_connector.gui.tooltip.performanceImpact": "Performance Impact:",
+  "item.pipe_connector.gui.tooltip.performanceImpactLow": "Low",
+  "item.pipe_connector.gui.tooltip.performanceImpactMediumHigh": "Medium-High",
+  "item.pipe_connector.gui.button.defaultPathfinding": "Manhattan Pathfinding",
   "item.pipe_connector.gui.button.stepPath": "Step Path",
   "item.pipe_connector.gui.tooltip.stepPath": "After choosing the first position, the path will follow your steps at selected depth",
   "item.pipe_connector.gui.tooltip.comingSoon": "Coming SoonTM...",
   "item.pipe_connector.gui.button.infoSign": "?",
-  "item.pipe_connector.gui.label.utilizeExistingPipes": "Utilize Pipes",
+  "item.pipe_connector.gui.label.utilizeExistingPipes": "Utilize Laid Pipes",
   "item.pipe_connector.gui.label.preventBlockWithInventoryDestruction": "Chest Guard",
   "item.pipe_connector.gui.button.on": "✔",
   "item.pipe_connector.gui.button.off": "❌",
